Disabled navigation item buttons while downloading

--- a/TODO
+++ b/TODO
@@ -11,6 +11,7 @@ FEATURES
 
 - Search: When search string changes, check if we have a selection before, and if item still matches, scroll to it.
 - Keyboard shortcuts
+- Perhaps if scheduled downloads setting is on, there should be a setting for whether to use file list URL or the existing files?
 
 TEST
 
@@ -23,5 +24,6 @@ COMPLETED
 - Automatic analysis of fixed widths (i.e. max length / field)
 - Pinch-to-zoom gesture support in items list
 - Pinch-to-zoom gesture support in details view
-- Suspected crash bug still remains: If having configured a automated refresh time, and popup about refreshing all files comes up while in items or details view, the actual file currently inspected might disappear -> app will crash... Not common scenario, but still.
+- Suspected crash bug: If having configured a automated refresh time, and popup about refreshing all files comes up while in items or details view, the actual file currently inspected might disappear -> app will crash... Not common scenario, but still.
+- Similar crash bug, when interacting with a file / choosing to download from within the Files view while re-downloading files. Now UI in Files view completely disabled while downloading.
 - Synchronize files: Add new setting in UI which will be used when refreshing all (will then save up all URLs, delete all files, and start downloading). But when downloading a file with URLs + settings, check if this key is set before deleting all files.
